// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures build "library" with shikaka 1`] = `
"Used script: node cli.js src/index.js --out-dir test/fixtures/library/dist --root-dir test/fixtures/library

Directory tree:

library
  dist
    Button.js
    Footer.js
    Modal.js
    index.js
    styles.css
  package.json
  src
    components
      Button
        index.js
        index.module.css
      Footer
        index.js
        index.module.less
      Modal
        index.js
        index.module.scss
    index.js
"
`;

exports[`fixtures build "library" with shikaka 2`] = `6`;

exports[`fixtures build "library-ts" with shikaka 1`] = `
"Used script: node cli.js src/index.ts --out-dir test/fixtures/library-ts/dist --root-dir test/fixtures/library-ts

Directory tree:

library-ts
  dist
    Button.js
    index.js
    styles.css
  package.json
  src
    components
      Button
        index.module.css
        index.tsx
    index.ts
"
`;

exports[`fixtures build "library-ts" with shikaka 2`] = `3`;
